Media Queries Fixed on iPhone

--- a/css/queries.css
+++ b/css/queries.css
@@ -5,7 +5,7 @@ Instead, 1rem = 1em = 16px */
 /* BELOW 1344px (Smallest Desktop) */
 /***********************/
 
-@media (width <=84em) {
+@media (max-width: 84em) {
   .hero {
     max-width: 120rem;
   }
@@ -18,18 +18,16 @@ Instead, 1rem = 1em = 16px */
     grid-template-columns: repeat(2, 1fr);
   }
 
-
   /* .gallery figure:nth-child(n+9):nth-child(-n+12) {
     display: none;
   } */
-
 }
 
 /***********************/
 /* BELOW 1200px (Landscape Tablets) */
 /***********************/
 
-@media (width <=75em) {
+@media (max-width: 75em) {
   html {
     /* 9 / 16 = 56.25% */
     font-size: 56.25%;
@@ -39,7 +37,6 @@ Instead, 1rem = 1em = 16px */
     column-gap: 4.8rem;
     row-gap: 6.4rem;
   }
-
 
   .heading-secondary {
     font-size: 3.6rem;
@@ -70,7 +67,7 @@ Instead, 1rem = 1em = 16px */
 /* BELOW 944px (Tablets) */
 /***********************/
 
-@media (width <=59em) {
+@media (max-width: 59em) {
   html {
     /* 8 / 16 = 50% */
     font-size: 50%;
@@ -183,11 +180,11 @@ Instead, 1rem = 1em = 16px */
     transform: translateX(0);
   }
 
-  .nav-open .icon-mobile-nav[name="close-outline"] {
+  .nav-open .icon-mobile-nav[name='close-outline'] {
     display: block;
   }
 
-  .nav-open .icon-mobile-nav[name="menu-outline"] {
+  .nav-open .icon-mobile-nav[name='menu-outline'] {
     display: none;
   }
 
@@ -206,8 +203,7 @@ Instead, 1rem = 1em = 16px */
 /* BELOW 704px (Smaller Tablets) */
 /***********************/
 
-@media (width <=44em) {
-
+@media (max-width: 44em) {
   .grid--3-cols,
   .grid--4-cols {
     grid-template-columns: repeat(2, 1fr);
@@ -251,7 +247,7 @@ Instead, 1rem = 1em = 16px */
 /* BELOW 544px (Phones) */
 /***********************/
 
-@media (width <=34em) {
+@media (max-width: 34em) {
   .grid {
     row-gap: 4.8rem;
   }
@@ -327,13 +323,12 @@ Instead, 1rem = 1em = 16px */
 
 /* 320px - 416px (Small Screen Phone) */
 
-@media (20em <=width <=26em) {
+@media (min-width: 20em) and (max-width: 26em) {
   .pricing-plan--complete::after {
     right: -15%;
     top: 6%;
   }
 }
-
 
 /* 
 - FONT SIZE SYSTEM (px)
@@ -343,7 +338,6 @@ Instead, 1rem = 1em = 16px */
 - SPACING SYSTEM (px)
         2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
 */
-
 
 /***********************/
 /* Fixing Safari Flexbox Gap */
@@ -385,13 +379,13 @@ Instead, 1rem = 1em = 16px */
   margin-bottom: 2.4rem;
 }
 
-@media (width <=75em) {
+@media (max-width: 75em) {
   .no-flexbox-gap .main-nav-list li:not(:last-child) {
     margin-right: 3.2rem;
   }
 }
 
-@media (width <=59em) {
+@media (max-width: 59em) {
   .no-flexbox-gap .main-nav-list li:not(:last-child) {
     margin-right: 0;
     margin-bottom: 4.8rem;
